force-app/main/default/objects/Interviewer__c/Interviewer__c.object-meta.xml
<CustomObject>
    <label>Interviewer</label>
    <nameField>
        <label>Interviewer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>