force-app/main/default/objects/Interviewer__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you available or not</description>
    <label>Availability</label>
    <type>Checkbox</type>
</CustomField>