force-app/main/default/objects/Interviewer__c/fields/Date_of_Interview__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Interview__c</fullName>
    <label>Date of Interview</label>
    <required>true</required>
    <type>Date</type>
</CustomField>